:lipstick: Prevent Loading overlap unintended stuff

--- a/src/ui/Loading/Loading.css
+++ b/src/ui/Loading/Loading.css
@@ -1,6 +1,10 @@
 .loading {
+  --loading-size: var(--size-xxl);
+
   width: 100%;
   height: 100%;
+  min-width: var(--loading-size);
+  min-height: var(--loading-size);
   position: relative;
 }
 
@@ -13,8 +17,8 @@
   top: 50%;
   left: 50%;
   transform: var(--origin-transform);
-  width: 64px;
-  height: 64px;
+  width:  var(--loading-size);;
+  height:  var(--loading-size);;
   border-radius: 50%;
   border-style: solid;
   border-width: 4px;
